# GCN-Transformer-Network

./: README.md  pyproject.toml  setup.sh
experiments/: data_fetcher.py  evaluate.py  preprocess.py  run_experiment.py  train.py
src/layers/: __init__.py  graph_convolution.py  multihead_attention.py  transformer.py
src/models/: graph_transformer_network.py
